# tuw_marker_detection

tuw_marker_benchmark/: CMakeLists.txt  package.xml  readme.txt
tuw_marker_benchmark/cfg/: camera_c920_mockup.yml  camera_c920_robot.yml
tuw_marker_benchmark/launch/: calibration_camera_params.launch  calibration_camera_test.launch  calibration_camera_tf.launch  demo_dummy_live.launch  demo_play_bag.launch  inc_dummy_camera.launch  inc_robot_camera.launch
tuw_marker_benchmark/launch/robot/: readme.txt  robot_calibration_camera_test.launch  robot_calibration_camera_tf.launch  robot_demo_joypad.launch  robot_driver_joypad.launch  robot_inc_tf_markers.launch  robot_inc_tf_robot.launch
tuw_marker_benchmark/launch/static/: rosbag.txt  (+4 more)
tuw_marker_benchmark/map/: bag_testmap.json
tuw_marker_benchmark/rviz/: calibration_tf_config.rviz  demo_bag_config.rviz  demo_dummy_config.rviz  demo_static_config.rviz
tuw_marker_benchmark/src/: __init__.py  benchmark.py  data_collector_node.py  listener.py  models.py  run_benchmark.py  tf_inv_node.py  tf_lookup_node.py  tf_to_marker_map_node.py
tuw_marker_benchmark/srv/: ClearData.srv  StoreData.srv
tuw_marker_playground/: CMakeLists.txt  package.xml
tuw_marker_playground/cfg/: Dice.cfg
tuw_marker_playground/doc/: dice_combomarker.odg  dice_pattern.odg
tuw_marker_playground/include/: mpg_dice_node.h  mpg_ellipses_node.h  mpg_node.h
tuw_marker_playground/launch/: demo_mpg_bag_aruco.launch  demo_mpg_bag_dice.launch  demo_mpg_combomarker_trust.launch  demo_mpg_dice_trust.launch  demo_mpg_dice_wide_angle.launch  demo_mpg_node_trust.launch  demo_mpg_node_wide_angle.launch
tuw_marker_playground/scripts/: mpg_detection2pose_node.py
tuw_marker_playground/src/: mpg_dice_node.cpp  mpg_ellipses_node.cpp  mpg_node.cpp
(+20 files in other folders)
